--- a/Obligatorio-PR2/Site.Master
+++ b/Obligatorio-PR2/Site.Master
@@ -40,7 +40,7 @@
 
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-dark bg-dark">
             <div class="container">
-                <a class="navbar-brand" runat="server" href="~/">TechRequest</a>
+                <a class="navbar-brand" runat="server" href="~/"></a>
                 <button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" title="Alternar navegación" aria-controls="navbarSupportedContent"
                     aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -48,12 +48,12 @@
                 <div class="collapse navbar-collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item"><a class="nav-link" runat="server" href="~/">Inicio</a></li>
-                        <li class="nav-item"><a class="nav-link" runat="server" href="~/About">Acerca de la pagina...</a></li>
-                        <li class="nav-item"><a class="nav-link" runat="server" href="~/Contact">Contacto</a></li>
-                        <li class="nav-item"><a class="nav-link" runat="server" href="~/WebCliente.aspx">Cliente</a></li> 
-                        <li class="nav-item"><a class="nav-link" runat="server" href="~/WebTecnico.aspx">Tecnico</a></li>
-                        <li class="nav-item"><a class="nav-link" runat="server" href="~/WebOrdenTrabajo.aspx">Orden de trabajo</a></li>
+                        <li class="nav-item"><a class="nav-link" runat="server" href="~/WebCliente.aspx">Gestión de clientes</a></li> 
+                        <li class="nav-item"><a class="nav-link" runat="server" href="~/WebTecnico.aspx">Gestión de tecnicos</a></li>
+                        <li class="nav-item"><a class="nav-link" runat="server" href="~/WebOrdenTrabajo.aspx">Gestión de ordenes de trabajo</a></li>
                         <li class="nav-item"><a class="nav-link" runat="server" href="~/WebBusquedaOrden.aspx">Busqueda del orden</a></li>
+                        <li class="nav-item"><a class="nav-link" runat="server" href="~/WebReporteActividad.aspx">Reporte de actividad</a></li>
+
                             
                     </ul>
                 </div>
